<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <data>
            <variable
                name="viewModel"
                type="com.cryptox.glovid.viewModels.signup.SignUpViewModelImpl"/>

            <import type="android.view.View"/>
        </data>

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signup.SignUpActivity">
        
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/signup">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/prompt_name"
                    android:inputType="text"
                    android:selectAllOnFocus="true" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/prompt_email"
                    android:layout_below="@+id/name"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true" />

                <RelativeLayout
                    android:id="@+id/phoneNumberContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal"
                    android:layout_below="@+id/email">

                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                        android:id="@+id/countryCodePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/phoneNumber"
                        android:layout_alignBottom="@+id/phoneNumber"
                        android:gravity="center_vertical"
                        app:ccp_defaultNameCode="ES"
                        app:ccp_hideNameCode="true"/>

                    <EditText
                        android:id="@+id/phoneNumber"
                        android:layout_toEndOf="@+id/countryCodePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_phone_number"
                        android:inputType="phone"
                        android:digits="0123456789"
                        android:selectAllOnFocus="true"
                        android:singleLine="true" />

                </RelativeLayout>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/prompt_password"
                    android:layout_below="@+id/phoneNumberContainer"
                    android:selectAllOnFocus="true"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/addressEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textPostalAddress"
                    android:imeActionLabel="@string/action_sign_up"
                    android:imeOptions="actionDone"
                    android:hint="@string/prompt_address"
                    android:selectAllOnFocus="true" />

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_height="300dp"
                    android:layout_below="@+id/addressEt" />

            </RelativeLayout>

        </ScrollView>

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:textColor="@android:color/white"
            android:text="@string/action_sign_up"
            android:background="@color/colorAccent" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone" />
    </RelativeLayout>
</layout>
